# mtcnn-linux-as

mtcnn_as/: settings.gradle
mtcnn_as/app/: build.gradle
mtcnn_as/app/src/androidTest/java/com/example/mtcnn/: ExampleInstrumentedTest.java
mtcnn_as/app/src/main/: AndroidManifest.xml
mtcnn_as/app/src/main/cpp/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
mtcnn_as/app/src/main/java/com/example/mtcnn/: MTCNN.java  MainActivity.java
mtcnn_as/app/src/main/res/layout/: main.xml
mtcnn_as/app/src/main/res/values/: strings.xml
mtcnn_as/app/src/test/java/com/example/mtcnn/: ExampleUnitTest.java
mtcnn_as/gradle/wrapper/: gradle-wrapper.properties
mtcnn_linux/: CMakeLists.txt  main.cpp  mtcnn.cpp  mtcnn.h
